DEC-97 Create API GET /organizations/:organizationId/applications
